--- a/src/i18n/zh-CN.json
+++ b/src/i18n/zh-CN.json
@@ -3,7 +3,7 @@
   "no-found-related": "未找到相关的 %{link} 进行评论",
   "please-contact": "请联系 %{user} 初始化创建",
   "init-issue": "初始化 Issue",
-  "leave-a-comment": "说点什么",
+  "leave-a-comment": "说点什么, 支持markdown语法",
   "preview": "预览",
   "edit": "编辑",
   "comment": "评论",
