--- a/src/i18n/zh-TW.json
+++ b/src/i18n/zh-TW.json
@@ -3,7 +3,7 @@
   "no-found-related": "未找到相關的 %{link}",
   "please-contact": "請聯絡 %{user} 初始化評論",
   "init-issue": "初始化 Issue",
-  "leave-a-comment": "寫點什麼",
+  "leave-a-comment": "寫點什麼，支持markdown語法",
   "preview": "預覽",
   "edit": "編輯",
   "comment": "評論",
